--- a/.gitignore
+++ b/.gitignore
@@ -563,3 +563,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,visualstudiocode,pycharm,python,django,flask,venv
+
+*.xlsx
